mega menu added

--- a/account.html
+++ b/account.html
@@ -64,7 +64,7 @@
                     <div class="header__nav__option">
                         <a href="#"><img src="img/icon/user.png" alt=""></a>
                         <a href="#" class="search-switch"><img src="img/icon/search.png" alt=""></a>
-                        <a href="checkout.html"><img src="img/icon/cart.png" alt=""> <span>0</span></a>
+                        <a href="shopping-cart.html"><img src="img/icon/cart.png" alt=""> <span>0</span></a>
                         <div class="price">$0.00</div>
                     </div>
                 </div>
@@ -94,7 +94,6 @@
                         <div class="dropdown-menu">
                             <a class="dropdown-item" href="product-view.html"> Product View </a>
                             <a class="dropdown-item" href="shopping-cart.html">Shopping Cart</a>
-                            <a class="dropdown-item" href="checkout.html">Checkout</a>
                             <a class="dropdown-item" href="#">Menu item 4</a>
                         </div>
                     </li>
