header section updated for all pages

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Marvel:ital,wght@0,400;0,700;1,400;1,700&display=swap"
         rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
 
     <!-- Css Styles -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
@@ -54,7 +53,7 @@
                                 <a class="dropdown-item" href="#">Menu item 4</a>
                             </div>
                         </li>
-                        <li class="nav-item dropdown has-megamenu">
+                        <li class="nav-item dropdown">
                             <a href="blog.html" class="nav-link dropdown-toggle">Blog</a>
                             <span class="dropdown-icon fa fa-plus"></span>
                             <div class="dropdown-menu">
@@ -211,6 +210,8 @@
         </div>
     </header>
     <!-- Header Section End -->
+
+    <section class="nav__fixer"></section>
 
     <!-- Hero Section Begin -->
     <section class="hero">
