--- a/shopping-cart.html
+++ b/shopping-cart.html
@@ -11,7 +11,6 @@
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Marvel:ital,wght@0,400;0,700;1,400;1,700&display=swap"
         rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
 
     <!-- Css Styles -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
@@ -23,103 +22,196 @@
     <link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 
-<body class="nice-scroll">
+<body>
+
     <!-- Header Section Begin -->
     <header class="header">
-        <div class="header__top">
-            <div class="container">
-                <div class="row">
-                    <div class="col-12 col-md-6">
-                        <div class="header__top__left">
-                            <p>Free shipping, 30-day return or refund guarantee.</p>
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-6">
-                        <div class="header__top__right">
-                            <div class="header__top__links">
-                                <a href="account.html">Sign in / Sign up</a>
-                                <a href="#">FAQs</a>
+        <div class="container-fluid">
+            <!-- navigation starts here  -->
+            <nav id="customNav" class="navbar navbar-expand-lg navbar navbar-light custom-nav customNav navbar-inverse"
+                data-toggle="affix">
+                <a class="navbar-brand brand__logo" href="index.html">
+                    <img src="img/ivar-arhsim-logo.png" alt="">
+                </a>
+                <button id="navToggler" class="nav-toggler order-3">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </button>
+                <div id="navbarCollapse" class="navbar-collapse">
+                    <ul class="navbar-nav">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="index.html">Home</a>
+                        </li>
+                        <!-- Dropdown -->
+                        <li class="nav-item dropdown">
+                            <a href="shop.html" class="nav-link dropdown-toggle">Shop</a>
+                            <span class="dropdown-icon fa fa-plus"></span>
+                            <div class="dropdown-menu">
+                                <a class="dropdown-item" href="product-view.html">Product View</a>
+                                <a class="dropdown-item" href="shopping-cart.html">Shopping Cart</a>
+                                <a class="dropdown-item" href="#">Menu item 4</a>
                             </div>
-                            <div class="header__top__hover">
-                                <span>USD<i class="arrow_carrot-down"></i></span>
-                                <ul>
-                                    <li>NP</li>
-                                    <li>USD</li>
-                                </ul>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a href="blog.html" class="nav-link dropdown-toggle">Blog</a>
+                            <span class="dropdown-icon fa fa-plus"></span>
+                            <div class="dropdown-menu">
+                                <a class="dropdown-item" href="blog-details.html">Blog Details</a>
+                                <a class="dropdown-item" href="#">Menu item 2</a>
+                                <a class="dropdown-item" href="#">Menu item 3</a>
+                                <a class="dropdown-item" href="#">Menu item 4</a>
                             </div>
-                        </div>
-                    </div>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="story.html">Our Story</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="about.html">About us</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="contact.html">Contact us</a>
+                        </li>
+                        <li class="nav-item dropdown has-megamenu">
+                            <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown"> Mega menu
+                            </a>
+                            <span class="dropdown-icon fa fa-plus"></span>
+                            <div class="dropdown-menu megamenu" role="menu">
+                                <div class="row">
+                                    <div class="mobile__submenu col-12 col-lg-2">
+                                        <div class="col-megamenu">
+                                            <h6 class="megamenu__title">Title Menu One</h6>
+                                            <ul class="megamenu__list">
+                                                <li class="megamenu__item"><a href="#" class="megamenu__link">Custom
+                                                        Menu</a></li>
+                                                <li class="megamenu__item"><a href="#" class="megamenu__link">Custom
+                                                        Menu</a></li>
+                                                <li class="megamenu__item"><a href="#" class="megamenu__link">Custom
+                                                        Menu</a></li>
+                                                <li class="megamenu__item"><a href="#" class="megamenu__link">Custom
+                                                        Menu</a></li>
+                                                <li class="megamenu__item"><a href="#" class="megamenu__link">Custom
+                                                        Menu</a></li>
+                                                <li class="megamenu__item"><a href="#" class="megamenu__link">Custom
+                                                        Menu</a></li>
+                                            </ul>
+                                        </div> <!-- col-megamenu.// -->
+                                    </div><!-- end col-3 -->
+                                    <div class="mobile__submenu col-12 col-lg-2">
+                                        <div class="col-megamenu">
+                                            <h6 class="megamenu__title">Title Menu Two</h6>
+                                            <ul class="megamenu__list">
+                                                <li class="megamenu__item"><a href="#" class="megamenu__link">Custom
+                                                        Menu</a></li>
+                                                <li class="megamenu__item"><a href="#" class="megamenu__link">Custom
+                                                        Menu</a></li>
+                                                <li class="megamenu__item"><a href="#" class="megamenu__link">Custom
+                                                        Menu</a></li>
+                                                <li class="megamenu__item"><a href="#" class="megamenu__link">Custom
+                                                        Menu</a></li>
+                                                <li class="megamenu__item"><a href="#" class="megamenu__link">Custom
+                                                        Menu</a></li>
+                                                <li class="megamenu__item"><a href="#" class="megamenu__link">Custom
+                                                        Menu</a></li>
+                                            </ul>
+                                        </div> <!-- col-megamenu.// -->
+                                    </div><!-- end col-3 -->
+                                    <div class="mobile__submenu col-12 col-lg-2">
+                                        <div class="col-megamenu">
+                                            <h6 class="megamenu__title">Title Menu Three</h6>
+                                            <ul class="megamenu__list">
+                                                <li class="megamenu__item"><a href="#" class="megamenu__link">Custom
+                                                        Menu</a></li>
+                                                <li class="megamenu__item"><a href="#" class="megamenu__link">Custom
+                                                        Menu</a></li>
+                                                <li class="megamenu__item"><a href="#" class="megamenu__link">Custom
+                                                        Menu</a></li>
+                                                <li class="megamenu__item"><a href="#" class="megamenu__link">Custom
+                                                        Menu</a></li>
+                                                <li class="megamenu__item"><a href="#" class="megamenu__link">Custom
+                                                        Menu</a></li>
+                                                <li class="megamenu__item"><a href="#" class="megamenu__link">Custom
+                                                        Menu</a></li>
+                                            </ul>
+                                        </div> <!-- col-megamenu.// -->
+                                    </div>
+                                    <div class="mobile__submenu col-12 col-lg-2">
+                                        <div class="col-megamenu">
+                                            <h6 class="megamenu__title">Title Menu Four</h6>
+                                            <ul class="megamenu__list">
+                                                <li class="megamenu__item"><a href="#" class="megamenu__link">Custom
+                                                        Menu</a></li>
+                                                <li class="megamenu__item"><a href="#" class="megamenu__link">Custom
+                                                        Menu</a></li>
+                                                <li class="megamenu__item"><a href="#" class="megamenu__link">Custom
+                                                        Menu</a></li>
+                                                <li class="megamenu__item"><a href="#" class="megamenu__link">Custom
+                                                        Menu</a></li>
+                                                <li class="megamenu__item"><a href="#" class="megamenu__link">Custom
+                                                        Menu</a></li>
+                                                <li class="megamenu__item"><a href="#" class="megamenu__link">Custom
+                                                        Menu</a></li>
+                                            </ul>
+                                        </div> <!-- col-megamenu.// -->
+                                    </div><!-- end col-3 -->
+                                    <div class="mobile__submenu col-12 col-lg-2">
+                                        <div class="col-megamenu">
+                                            <h6 class="megamenu__title">Title Menu Four</h6>
+                                            <ul class="megamenu__list">
+                                                <li class="megamenu__item"><a href="#" class="megamenu__link">Custom
+                                                        Menu</a></li>
+                                                <li class="megamenu__item"><a href="#" class="megamenu__link">Custom
+                                                        Menu</a></li>
+                                                <li class="megamenu__item"><a href="#" class="megamenu__link">Custom
+                                                        Menu</a></li>
+                                                <li class="megamenu__item"><a href="#" class="megamenu__link">Custom
+                                                        Menu</a></li>
+                                                <li class="megamenu__item"><a href="#" class="megamenu__link">Custom
+                                                        Menu</a></li>
+                                                <li class="megamenu__item"><a href="#" class="megamenu__link">Custom
+                                                        Menu</a></li>
+                                            </ul>
+                                        </div> <!-- col-megamenu.// -->
+                                    </div><!-- end col-3 -->
+                                    <div class="mobile__submenu col-12 col-lg-2">
+                                        <div class="col-megamenu">
+                                            <h6 class="megamenu__title">Title Menu Four</h6>
+                                            <ul class="megamenu__list">
+                                                <li class="megamenu__item"><a href="#" class="megamenu__link">Custom
+                                                        Menu</a></li>
+                                                <li class="megamenu__item"><a href="#" class="megamenu__link">Custom
+                                                        Menu</a></li>
+                                                <li class="megamenu__item"><a href="#" class="megamenu__link">Custom
+                                                        Menu</a></li>
+                                                <li class="megamenu__item"><a href="#" class="megamenu__link">Custom
+                                                        Menu</a></li>
+                                                <li class="megamenu__item"><a href="#" class="megamenu__link">Custom
+                                                        Menu</a></li>
+                                                <li class="megamenu__item"><a href="#" class="megamenu__link">Custom
+                                                        Menu</a></li>
+                                            </ul>
+                                        </div> <!-- col-megamenu.// -->
+                                    </div><!-- end col-3 -->
+                                </div><!-- end row -->
+                            </div> <!-- dropdown-mega-menu.// -->
+                        </li>
+                    </ul>
                 </div>
-            </div>
-        </div>
-        <div class="container">
-            <div class="row align-items-center justify-content-between">
-                <div class="col-5 col-lg-3 col-md-3">
-                    <div class="header__logo">
-                        <a href="./index.html"><img src="img/ivar-arhsim-logo.png" alt=""></a>
-                    </div>
+                <div class="header__nav__link navbar-brand order-2">
+                    <a class="nav__link__item" href="account.html"><img src="img/icon/user.png" alt=""></a>
+                    <a class="nav__link__item" href="#" class="search-switch"><img src="img/icon/search.png" alt=""></a>
+                    <a class="nav__link__item" href="shopping-cart.html">
+                        <img src="img/icon/cart.png" alt="">
+                        <span class="price">$0.00</span>
+                    </a>
                 </div>
-
-                <div class="col-7 col-lg-3 col-md-6">
-                    <div class="header__nav__option">
-                        <a href="#"><img src="img/icon/user.png" alt=""></a>
-                        <a href="#" class="search-switch"><img src="img/icon/search.png" alt=""></a>
-                        <a href="shopping-cart.html"><img src="img/icon/cart.png" alt=""> <span>0</span></a>
-                        <div class="price">$0.00</div>
-                    </div>
-                </div>
-            </div>
+            </nav>
+            <!-- navigation ends here  -->
         </div>
     </header>
     <!-- Header Section End -->
 
-    <!-- navigation starts here  -->
-    <nav id="customNav" class="navbar navbar-expand-lg navbar navbar-light custom-nav customNav navbar-inverse"
-        data-toggle="affix">
-        <div class="container">
-            <button id="navToggler" class="nav-toggler">
-                <span></span>
-                <span></span>
-                <span></span>
-            </button>
-            <div id="navbarCollapse" class="navbar-collapse">
-                <ul class="navbar-nav">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="index.html">Home</a>
-                    </li>
-                    <!-- Dropdown -->
-                    <li class="nav-item dropdown">
-                        <a href="shop.html" class="nav-link dropdown-toggle">Shop</a>
-                        <span class="dropdown-icon fa fa-plus"></span>
-                        <div class="dropdown-menu">
-                            <a class="dropdown-item" href="product-view.html">Product View</a>
-                            <a class="dropdown-item" href="shopping-cart.html">Shopping Cart</a>
-                            <a class="dropdown-item" href="#">Menu item 4</a>
-                        </div>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a href="blog.html" class="nav-link dropdown-toggle">Blog</a>
-                        <span class="dropdown-icon fa fa-plus"></span>
-                        <div class="dropdown-menu">
-                            <a class="dropdown-item" href="blog-details.html">Blog Details</a>
-                            <a class="dropdown-item" href="#">Menu item 2</a>
-                            <a class="dropdown-item" href="#">Menu item 3</a>
-                            <a class="dropdown-item" href="#">Menu item 4</a>
-                        </div>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="story.html">Our Story</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="about.html">About us</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact us</a>
-                    </li>
-                </ul>
-            </div>
-    </nav>
-    <!-- navigation ends here  -->
+    <section class="nav__fixer""></section>
 
     <!-- Shopping Cart Section Begin -->
     <section class="shopping-cart section-all">
