all the pages, css and js modified

--- a/account.html
+++ b/account.html
@@ -57,38 +57,36 @@
                                 <div class="row">
                                     <div class="mobile__submenu col-12 col-lg-2">
                                         <div class="col-megamenu">
-                                            <h6 class="megamenu__title">Cloothing</h6>
+                                            <h6 class="megamenu__title">Pages</h6>
                                             <ul class="megamenu__list">
                                                 <li class="megamenu__item">
-                                                    <a href="#" class="megamenu__link ">
-                                                        <span class="reverse__underline__animation">All Knitwear</span>
+                                                    <a href="about.html" class="megamenu__link ">
+                                                        <span class="reverse__underline__animation">About</span>
                                                     </a>
                                                 </li>
                                                 <li class="megamenu__item">
-                                                    <a href="#" class="megamenu__link">
-                                                        <span class="reverse__underline__animation">Accessories</span>
+                                                    <a href="shop.html" class="megamenu__link">
+                                                        <span class="reverse__underline__animation">Listing</span>
                                                     </a>
                                                 </li>
                                                 <li class="megamenu__item">
-                                                    <a href="#" class="megamenu__link">
-                                                        <span class="reverse__underline__animation">jumpers</span>
+                                                    <a href="product-view.html" class="megamenu__link">
+                                                        <span class="reverse__underline__animation">Detail</span>
                                                     </a>
                                                 </li>
                                                 <li class="megamenu__item">
-                                                    <a href="#" class="megamenu__link">
-                                                        <span class="reverse__underline__animation">cardigans</span>
+                                                    <a href="collection.html" class="megamenu__link">
+                                                        <span class="reverse__underline__animation">Collection</span>
                                                     </a>
                                                 </li>
                                                 <li class="megamenu__item">
-                                                    <a href="#" class="megamenu__link">
-                                                        <span class="reverse__underline__animation">capes &
-                                                            ponchos</span>
+                                                    <a href="account.html" class="megamenu__link">
+                                                        <span class="reverse__underline__animation">Account</span>
                                                     </a>
                                                 </li>
                                                 <li class="megamenu__item">
-                                                    <a href="#" class="megamenu__link">
-                                                        <span class="reverse__underline__animation">skirts &
-                                                            trousers</span>
+                                                    <a href="contact.html" class="megamenu__link">
+                                                        <span class="reverse__underline__animation">Contact</span>
                                                     </a>
                                                 </li>
                                                 <li class="megamenu__item">
@@ -898,7 +896,6 @@
                     </a>
                     <a class="nav__link__item" href="shopping-cart.html">
                         <img src="img/icon/cart.svg" alt="">
-                        <span class="price">$0.00</span>
                     </a>
                 </div>
             </nav>
