--- a/story.html
+++ b/story.html
@@ -57,38 +57,36 @@
                                 <div class="row">
                                     <div class="mobile__submenu col-12 col-lg-2">
                                         <div class="col-megamenu">
-                                            <h6 class="megamenu__title">Cloothing</h6>
+                                            <h6 class="megamenu__title">Pages</h6>
                                             <ul class="megamenu__list">
                                                 <li class="megamenu__item">
-                                                    <a href="#" class="megamenu__link ">
-                                                        <span class="reverse__underline__animation">All Knitwear</span>
+                                                    <a href="about.html" class="megamenu__link ">
+                                                        <span class="reverse__underline__animation">About</span>
                                                     </a>
                                                 </li>
                                                 <li class="megamenu__item">
-                                                    <a href="#" class="megamenu__link">
-                                                        <span class="reverse__underline__animation">Accessories</span>
+                                                    <a href="shop.html" class="megamenu__link">
+                                                        <span class="reverse__underline__animation">Listing</span>
                                                     </a>
                                                 </li>
                                                 <li class="megamenu__item">
-                                                    <a href="#" class="megamenu__link">
-                                                        <span class="reverse__underline__animation">jumpers</span>
+                                                    <a href="product-view.html" class="megamenu__link">
+                                                        <span class="reverse__underline__animation">Detail</span>
                                                     </a>
                                                 </li>
                                                 <li class="megamenu__item">
-                                                    <a href="#" class="megamenu__link">
-                                                        <span class="reverse__underline__animation">cardigans</span>
+                                                    <a href="collection.html" class="megamenu__link">
+                                                        <span class="reverse__underline__animation">Collection</span>
                                                     </a>
                                                 </li>
                                                 <li class="megamenu__item">
-                                                    <a href="#" class="megamenu__link">
-                                                        <span class="reverse__underline__animation">capes &
-                                                            ponchos</span>
+                                                    <a href="account.html" class="megamenu__link">
+                                                        <span class="reverse__underline__animation">Account</span>
                                                     </a>
                                                 </li>
                                                 <li class="megamenu__item">
-                                                    <a href="#" class="megamenu__link">
-                                                        <span class="reverse__underline__animation">skirts &
-                                                            trousers</span>
+                                                    <a href="contact.html" class="megamenu__link">
+                                                        <span class="reverse__underline__animation">Contact</span>
                                                     </a>
                                                 </li>
                                                 <li class="megamenu__item">
@@ -898,7 +896,6 @@
                     </a>
                     <a class="nav__link__item" href="shopping-cart.html">
                         <img src="img/icon/cart.svg" alt="">
-                        <span class="price">$0.00</span>
                     </a>
                 </div>
             </nav>
@@ -907,42 +904,14 @@
     </header>
     <!-- Header Section End -->
 
-    <section class="nav__fixer""></section>
+    <section class="nav__fixer"></section>
 
     <!-- Story Hero Section Begin -->
-    <section class=" hero story__slider">
-        <div class="hero__slider owl-carousel">
-            <div class="hero__items set-bg d-flex align-items-center" data-setbg="img/breadcrumb-bg2.jpg">
-                <div class="container">
-                    <div class="row justify-content-center">
-                        <div class="col">
-                            <div class="hero__text text-center">
-                                <h2>Our Story</h2>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="hero__items set-bg d-flex align-items-center" data-setbg="img/banner-bg2.jpg">
-                <div class="container">
-                    <div class="row justify-content-center">
-                        <div class="">
-                            <div class="hero__text text-center">
-                                <h2>Our Story</h2>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="hero__items set-bg d-flex align-items-center" data-setbg="img/banner-bg3.jpg">
-                <div class="container">
-                    <div class="row justify-content-center">
-                        <div class="col">
-                            <div class="hero__text text-center">
-                                <h2>Our Story</h2>
-                            </div>
-                        </div>
-                    </div>
+    <section class=" breadcrumb-blog set-bg" data-setbg="img/breadcrumb-bg1.jpg">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h2>Our Story</h2>
                 </div>
             </div>
         </div>
