collection listing page added, collection page modifiesd and css added

--- a/collection.html
+++ b/collection.html
@@ -906,20 +906,32 @@
 
     <section class="nav__fixer""></section>
 
+    <!-- Hero Section Begin -->
+    <section class="hero">
+        <div class="hero__slider owl-carousel">
+            <div class="hero__items set-bg d-flex align-items-center" data-setbg="img/banner-bg1.jpg">
+            </div>
+            <div class="hero__items set-bg d-flex align-items-center" data-setbg="img/banner-bg2.jpg">
+            </div>
+            <div class="hero__items set-bg d-flex align-items-center" data-setbg="img/banner-bg3.jpg">
+            </div>
+        </div>
+    </section> 
+    <!-- Hero Section End -->
+
     <!-- Blog Main Section Begin -->
     <section class="blog section-all">
         <div class="container-fluid">
-            <h1 class="blog__heading">Collections</h1>
             <section class="blog__body">
-                <div class="blog__item row">
+                <div class="blog__item row justi">
                     <header class="col-12 col-md-2">
                         <h4>A/W 2020-21</h4>
                     </header>
                     <div class="blog__item__body col-11 col-md-8">
-                        <a href="#">
+                        <a href="collection-listing.html">
                             <img src="./img/blog/blog-1.jpg" alt="">
                         </a>
-                        <a href="#">
+                        <a href="collection-listing.html">
                             <h3 class="blog__item__footer__title">Title Here</h3>
                         </a>
                     </div>
@@ -931,10 +943,10 @@
                         <h4>A/W 2020-21</h4>
                     </header>
                     <div class="blog__item__body col-11 col-md-8">
-                        <a href="#">
+                        <a href="collection-listing.html">
                             <img src="./img/blog/blog-3.jpg" alt="">
                         </a>
-                        <a href="#">
+                        <a href="collection-listing.html">
                             <h3 class="blog__item__footer__title">Title Here</h3>
                         </a>
                     </div>
@@ -946,10 +958,10 @@
                         <h4>A/W 2020-21</h4>
                     </header>
                     <div class="blog__item__body col-11 col-md-8">
-                        <a href="#">
+                        <a href="collection-listing.html">
                             <img src="./img/blog/blog-4.jpg" alt="">
                         </a>
-                        <a href="#">
+                        <a href="collection-listing.html">
                             <h3 class="blog__item__footer__title">Title Here</h3>
                         </a>
                     </div>
