collection, index and collection detail page added

--- a/collection.html
+++ b/collection.html
@@ -906,22 +906,12 @@
 
     <section class="nav__fixer""></section>
 
-    <!-- Hero Section Begin -->
-    <section class="hero">
-        <div class="hero__slider owl-carousel">
-            <div class="hero__items set-bg d-flex align-items-center" data-setbg="img/banner-bg1.jpg">
-            </div>
-            <div class="hero__items set-bg d-flex align-items-center" data-setbg="img/banner-bg2.jpg">
-            </div>
-            <div class="hero__items set-bg d-flex align-items-center" data-setbg="img/banner-bg3.jpg">
-            </div>
-        </div>
-    </section> 
-    <!-- Hero Section End -->
-
     <!-- Blog Main Section Begin -->
     <section class="blog section-all">
         <div class="container-fluid">
+            <div class="heading__all text-center">
+                <h1>Collections</h1>
+            </div>
             <section class="blog__body">
                 <div class="blog__item row justi">
                     <header class="col-12 col-md-2">
