--- a/index.html
+++ b/index.html
@@ -976,22 +976,19 @@
 
     <!-- Banner Section Begin -->
     <section class="banner section-all">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
+        <div class="container-full">
                     <div class="banner__item">
                         <div class="banner__item__pic">
                             <img src="img/manfashion.jpg" alt="">
                         </div>
-                        <div class="banner__item__text">
-                            <h2>Clothing Collections 2020</h2>
-                            <a href="#">Shop now</a>
+                        <div class="container">
+                            <div class="banner__item__text">
+                                <h2>Clothing Collections 2020</h2>
+                                <a href="#">Shop now</a>
+                            </div>
                         </div>
-                    </div>
-                </div>
-                
+                    </div>                
             </div>
-        </div>
     </section>
     <!-- Banner Section End -->
 
